--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.10"
 superqt = "^0.6.1"
 pyqt6-charts = "^6.6.0"
 pyqtgraph = "^0.13.7"
+ruptures = "^1.1.9"
+
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
