--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ superqt = "^0.6.1"
 pyqt6-charts = "^6.6.0"
 pyqtgraph = "^0.13.7"
 ruptures = "^1.1.9"
-
+numba  = "^0.61.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
